--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
+<!-- CECI EST UN TEST GIT-->
 <body>
     <div class="main-container">
         <header></header>
