--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--Stylesheets-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -62,8 +62,8 @@
 
 <!-- Info -->
         <div class="info">
-            <div class="info-title">
-                <p><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+                <p class="info-title"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
+        </div>
     </header>
 
 <!-- Main content-->
@@ -297,9 +297,9 @@
                     </a>
                     <a href="#">
                         <article class="activites-card-content">
-                            <img src="./images/activites/florian-wehde.jpg" alt="Notre-Dame de la Garde">
+                            <img src="./images/activites/florian-wehde.jpg" alt="Notre-Dame-de-la-Garde">
                                 <div class="activites-card-txt">
-                                    <h3 class="activites-card-title">Notre-Dame de la Garde</h3>
+                                    <h3 class="activites-card-title">Notre-Dame-de-la-Garde</h3>
                                 </div>
                         </article>
                     </a>
