--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             </div>
                 <label for="search" class="sr-only">Rechercher</label> <!-- sr-only accessibilité malvoyant-->
                 <input type="text" name="search" id="search" placeholder="Marseille, France" class="search-bar">  <!-- insertion d'un champ de texte-->
-                <button type="submit" class="search-button">Rechercher</button>
+                <button type="submit" class="search-button" id="search-button">Rechercher</button>
+                <button type="submit" id="icon-glass"><i class="fa-solid fa-magnifying-glass icon-glass"></i></button>
         </div>
 
 <!-- Filters -->
@@ -310,20 +311,20 @@
             <footer>
                 <div class="footer-container">
                     <div class="a-propos">
-                        <h3>À propos</h3>
-                            <p><a href="#">Fonctionnement du site</a></p>
-                            <p><a href="#">Conditions générales</a></p>
-                            <p><a href="#">Données et confidentialité</a></p>
+                        <h3 class="footer-title">À propos</h3>
+                            <p class="footer-txt"><a href="#">Fonctionnement du site</a></p>
+                            <p class="footer-txt"><a href="#">Conditions générales</a></p>
+                            <p class="footer-txt"><a href="#">Données et confidentialité</a></p>
                     </div>
                     <div class="nos-hebergements">
-                        <h3>Nos hébergements</h3>
-                            <p><a href="#">Charte qualité</a></p>
-                            <p><a href="#">Proposer votre hôtel</a></p>
+                        <h3 class="footer-title">Nos hébergements</h3>
+                            <p class="footer-txt"><a href="#">Charte qualité</a></p>
+                            <p class="footer-txt"><a href="#">Proposer votre hôtel</a></p>
                     </div>
                     <div class="assistance">
-                        <h3>Assistance</h3>
-                            <p><a href="#">Centre d'aide</a></p>
-                            <p><a href="#">Nous contacter</a></p>
+                        <h3 class="footer-title">Assistance</h3>
+                            <p class="footer-txt"><a href="#">Centre d'aide</a></p>
+                            <p class="footer-txt"><a href="#">Nous contacter</a></p>
                     </div>
                 </div>
             </footer>
