--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="main-container">
+    <div>
     <header>
 <!-- Navbar-->
         <nav class="nav-bar">
@@ -31,13 +31,14 @@
                 <li><a href="#">Activités</a></li>
             </ul>
         </nav>
-
+    </header>
         <div>
             <h1 class="title-h1">Trouvez votre hébergement pour des vacances de rêve</h1>
             <p class="subtitle-h1">En plein centre-ville ou en pleine nature</p>
         </div>
         
 <!-- Search bar-->
+    <main>
         <div class="search-box">
             <div class="icon-location">
                 <i class="fa-solid fa-location-dot"></i> 
@@ -49,27 +50,26 @@
         </div>
 
 <!-- Filters -->
-        <div class="filters">
-            <div>
-                <h3 class="filters-title">Filtres</h3>
-            </div>
-            <div class="filters-content">
-                    <button class="filters-icon"><i class="fa-solid fa-money-bill-wave filter-icon"></i>Économique</button>
-                    <button class="filters-icon"><i class="fa-solid fa-person filter-icon"></i>Familial</button>
-                    <button class="filters-icon"><i class="fa-solid fa-heart filter-icon"></i>Romantique</button>
-                    <button class="filters-icon"><i class="fa-solid fa-fire filter-icon"></i>Nos pépites</button>
-            </div>
-        </div>
+<div class="filters">
+    <div>
+        <h3 class="filters-title">Filtres</h3>
+    </div>
+    <ul class="filters-content">
+            <li class="filters-icon"><i class="fa-solid fa-money-bill-wave filter-icon"></i>Économique</li>
+            <li class="filters-icon"><i class="fa-solid fa-person filter-icon"></i>Familial</li>
+            <li class="filters-icon"><i class="fa-solid fa-heart filter-icon"></i>Romantique</li>
+            <li class="filters-icon"><i class="fa-solid fa-fire filter-icon"></i>Nos pépites</li>
+    </ul>
+</div>
 
 <!-- Info -->
         <div class="info">
                 <p class="info-title"><i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
-    </header>
 
 <!-- Main content-->
 
-        <main>
+        
             <div class="hebergements-and-populaires">
 
 <!--Hébergements-->
@@ -306,7 +306,7 @@
                     </a>
                 </div>
             </section>  
-        </main>
+    </main>
 <!-- Footer -->
             <footer>
                 <div class="footer-container">
