--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="icon-location">
                 <i class="fa-solid fa-location-dot"></i> 
             </div>
-                <label for="search" class="sr-only">Rechercher</label> <!-- sr-only accessibilité malvoyant-->
-                <input type="text" name="search" id="search" placeholder="Marseille, France" class="search-bar">  <!-- insertion d'un champ de texte-->
+                <label for="search" class="sr-only">Rechercher</label> 
+                <input type="text" name="search" id="search" placeholder="Marseille, France" class="search-bar"> 
                 <button type="submit" class="search-button" id="search-button">Rechercher</button>
                 <button type="submit" id="icon-glass"><i class="fa-solid fa-magnifying-glass icon-glass"></i></button>
         </div>
@@ -87,12 +87,12 @@
                                         <p class="card-subtitle">Nuit à partir de 52<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
@@ -106,12 +106,12 @@
                                         <p class="card-subtitle">Nuit à partir de 96<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
@@ -125,12 +125,12 @@
                                         <p class="card-subtitle">Nuit à partir de 76<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
@@ -144,12 +144,12 @@
                                         <p class="card-subtitle">Nuit à partir de 46<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
@@ -163,12 +163,12 @@
                                         <p class="card-subtitle">Nuit à partir de 25<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
@@ -182,12 +182,12 @@
                                         <p class="card-subtitle">Nuit à partir de 23<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
@@ -215,12 +215,12 @@
                                         <p class="card-subtitle">Nuit à partir de 128<span class="euro">€</span></p>
                                     </div>
                                     <div class="card-rating">
-                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> <!-- fa-xs équivaut à la taille en 0.75em-->
+                                        <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i> 
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
                                         <i class="fa-xs fa-solid fa-star neutral-star" aria-hidden="true"></i>
-                                        <span class="sr-only">Note de 4 sur 5</span> <!-- sr-only accessibilité malvoyant-->
+                                        <span class="sr-only">Note de 4 sur 5</span> 
                                     </div>
                                 </div>
                             </article>
